# realtimefaceRecognition

./: CMakeLists.txt  README.md  hogSaveFeature.txt  savefeature.txt
include/: BoundedPQueue.hpp  Point.hpp  dataBase.hpp  faceAttri.hpp  faceRecong.hpp  fhog.hpp  kdtree.hpp  labdata.hpp  lshbox.h  ms_kdtree.hpp  objectbase.hpp  pca.hpp  reId.hpp  utils_config.hpp
include/caffe/layers/: detection_ccpd_output_layer.hpp  detection_faceBlur_output_layer.hpp  detection_output_layer.hpp
include/caffe/proto/: caffe.pb.h
include/dataBase/: dataBase.hpp
include/faceAnalysis/: faceAnalysis.hpp  faceAttri.hpp  faceRecong.hpp  objectDetect.hpp  objectbase.hpp  reId.hpp  reidInference.hpp
include/kcf/: ffttools.hpp  kcftracker.hpp  recttools.hpp
include/lshbox/: matrix.h  metric.h  topk.h
include/lshbox/lsh/: psdlsh_vector_pair.h
include/munkresAssignment/: hungarianoper.h  matrix.h  munkres.h
include/sort/: dataType.h  kalmanfilter.h  linear_assignment.h  nn_matching.h  track.h  tracker.h
include/util/: utils_config.hpp
src/: BoundedPQueue.cpp  KDTree.cpp  Point.cpp  dataBase.cpp  faceAnalysis.cpp  faceAttri.cpp  faceRecong.cpp  fhog.cpp  kcftracker.cpp  main.cpp  main_reid.cpp  objectDetect.cpp  objectbase.cpp  reId.cpp  testSample.cpp  util_config.cpp
src/dataBase/: dataBase.cpp
src/faceAnalysis/: faceAnalysis.cpp  faceAttri.cpp  faceRecong.cpp  objectDetect.cpp  objectbase.cpp  reId.cpp  reidInference.cpp
src/kcf/: fhog.cpp  kcftracker.cpp
src/munkresAssignment/: hungarianoper.cpp  munkres.cpp
src/sort/: kalmanfilter.cpp  linear_assignment.cpp  model.cpp  nn_matching.cpp  track.cpp  tracker.cpp
src/util/: Point.cpp  util_config.cpp
